# auric

./: .gitignore  flake.nix  pyproject.toml
cmd/auric/: main.go
docs/: 0_DESIGN.md  1_DESIGN.md
example/: demo.py
examples/: README.md
internal/check/: check.go
internal/eval/: eval.go
internal/lexer/: lexer.go
internal/parser/: parser.go
internal/syntax/: ast.go
internal/totality/: totality.go
notes/: 0_DESIGN.md  BUILTINS_VS_MACROS.md  COMPTIME_PRIMITIVES.md  DEPENDENT_TYPES_DESIGN.md  DESIGN_IDEAS.md  GRAMMAR.md  IMPORT_SYSTEM.md  LANGUAGE_LAYERS.md  LITERALS_DISCUSSION.md  MACRO_DESIGN.md  MACRO_IMPLEMENTATION.md  MACRO_RECOMMENDATIONS.md  MACRO_SURVEY.md  MACRO_SYNTAX_IMPROVEMENTS.md  MINIMAL_CORE_FINAL.md  PRIMITIVES_VS_MACROS.md  SYNTAX_COMPARISON.md  SYNTAX_DESIGN.md  UNIFIED_COMPTIME_DESIGN.md  design.md  making_a_language.md  pipes_and_partial.md  syntax.md  type.md
src/auric/: __init__.py  __main__.py  ast.py  codegen.py  evaluator.py  lexer.py  macro_expander.py  macro_patterns.py  macros.py  memory.py  parser.py  runtime.py  staging.py  token_tree.py  tt_macros.py  tt_parser.py  type_checker.py  types.py
std/: bool.au  builtins.au  list.au  nat.au  vec.au
tests/: __init__.py  test_codegen.py  test_escape.py  test_escape_analysis.py  test_exhaustiveness.py  test_interprocedural.py  test_parsing.py  test_pattern_and_let.py  test_region_codegen.py  test_regions.py  test_type_specialization.py
